feat(api): add top tv shows contracts
